--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
 
    <div class="jumbotron">
-      <img class="img-responsive" src="Cleaners.png">
+      <img class="img-responsive" src="img/Cleaners.png">
    </div>
 
    <div class="top-buffer"></div>
@@ -31,17 +31,17 @@
       <div class="row">
         <div class="top-buffer"></div>
          <div class ="col-sm-4">
-            <img src="thread.png">
+            <img src="img/thread.png">
             Expert Alterations
          </div>
          <div class="top-buffer"></div>
          <div class ="col-sm-4">
-            <img src="hanger.png">
+            <img src="img/hanger.png">
             Dry Cleaning
          </div>
          <div class="top-buffer"></div>
          <div class ="col-sm-4">
-            <img src="green.png">
+            <img src="img/green.png">
             Eco-Friendly
          </div>
       </div>
