--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
    <div class="container text-center icons">
       <div class="row">
         <div class="top-buffer"></div>
-         <div class ="col-sm-4">
-            <img src="img/thread.png">
+         <div class ="col-xs-4">
+            <img src="img/thread.png"> <br><br>
             Expert Alterations
          </div>
          <div class="top-buffer"></div>
-         <div class ="col-sm-4">
-            <img src="img/hanger.png">
+         <div class ="col-xs-4">
+            <img src="img/hanger.png"> <br><br>
             Dry Cleaning
          </div>
          <div class="top-buffer"></div>
-         <div class ="col-sm-4">
-            <img src="img/green.png">
+         <div class ="col-xs-4">
+            <img src="img/green.png"> <br><br>
             Eco-Friendly
          </div>
       </div>
